# ControlSystemAdapter-OPC-UA-Adapter

./: .clang-format  .gitignore  .jenkinsfile  .rodare.json  AUTHORS.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  opcuaAdapter_mapping.xml  uamapping.xml
cmake/: ControlSystemAdapterOPCUA-config.in  Doxyfile.in  FindControlSystemAdapterOPCUA.cmake.in  makeGcov.sh  make_coverage.sh.in  make_valgrind.sh.in
doc/: Doxyfile.in
examples/: ControlSystem_OPCUA_Sample_Adapter.cpp  csa_opcua_adapter_example.cpp  csa_opcua_adapter_example2.cpp  example_mapping.xml  exapleApplicationOPCUA.cpp  runTimeValueGenerator.cpp  runTimeValueGenerator.h  runtimeValueGenerator.cpp  runtimeValueGenerator.h  runtime_value_generator.cpp  runtime_value_generator.h
include/: ControlSystemAdapterOPCUA.h  XMLFileHandler.h  csa_additionalvariable.h  csa_config.h.in  csa_namespace.h  csa_opcua_adapter.h  csa_processvariable.h  ipc_managed_object.h  ipc_manager.h  ipc_task.h  loggingLevel_type.h  mtca_additionalvariable.h  mtca_processarray.h  mtca_processscalar.h  mtca_processvariable.h  mtca_timestamp.h  mtca_uaadapter.h  node_historizing.h  open62541.h  ua_adapter.h  ua_additionalvariable.h  ua_map_types.h  ua_mapped_class.h  ua_processvariable.h  ua_proxies.h  ua_proxies_callback.h  ua_proxies_typeconversion.h  ua_typeconversion.h  void_type.h  xml_file_handler.h
include/model_prebuilt/: csa_config.h  csa_namespaceinit_generated.c  csa_namespaceinit_generated.h  mtca_namespaceinit_generated.c  mtca_namespaceinit_generated.h
include/open62541/: open62541.h
lib/: README.md
lib/open62541/: libopen62541.so.0  libopen62541.so.0.2.0
model/: Opc.Ua.NodeSet2.xml  adapterIMm.tt2pro  adapterim.ua  adapterim.xml  templatemodel.tt2pro  templatemodel.ua  templatemodel.xml
src/: CSA_OPCUA_Application.cpp  ControlSystemAdapterOPCUA.cpp  ControlSystem_OPCUA_Sample_Adapter.cpp  XMLFileHandler.cpp  csa_additionalvariable.cpp  csa_namespace.c  csa_opcua_adapter.cpp  csa_opcua_application.cpp  csa_processvariable.cpp  ipc_managed_object.cpp  ipc_manager.cpp  ipc_task.cpp  mtca_additionalvariable.cpp  mtca_processarray.cpp  mtca_processscalar.cpp  mtca_processvariable.cpp  mtca_timestamp.cpp  mtca_uaadapter.cpp  node_historizing.cpp  open62541.c  ua_adapter.cpp  ua_additionalvariable.cpp  ua_map_types.cpp  ua_mapped_class.cpp  ua_processvariable.cpp  ua_proxies.cpp  ua_template.cpp  void_type.cpp  xml_file_handler.cpp
tests/: CMakeLists.txt  test_ControlSystemAdapterOPCUA.cpp  test_ipc.cpp  test_mtca_uaadapter.cpp  test_opcua_processvariable.cpp  test_opcua_uaadapter.cpp  uamapping_test.xml  uamapping_test_1.xml  uamapping_test_2.xml  uamapping_test_applicationismissing.xml  uamapping_test_configismissing.xml  uamapping_test_general.xml  uamapping_test_notwellformed.xml  uamapping_test_portismissing.xml  uamapping_test_portismissung.xml  uamapping_test_twoconfigs.xml  uamapping_test_void_bool.xml  uamapping_test_void_method.xml
tests/include/: test_sample_data.h
tests/src/: test_ControlSystemAdapterOPCUA.cpp  test_csa_opcua_adapter.cpp  test_ipc.cpp  test_opcua_additionalvariable.cpp  test_opcua_mapping.cpp  test_opcua_processvariable.cpp  test_opcua_uaadapter.cpp  test_opcua_void_mapping.cpp  test_xml_handler.cpp
tools/: buildDependencies.sh  setup_ControlSystemAdapter.sh  setup_open62541.sh
tools/mapfileGenerator/: LLRFServer_mapping.xml  chimeratk-opc-ua-mapfile-generator
tools/mapfileGenerator/ctk_opcua_generator_tools/: LDSUI.py  LDSUI.ui  encryptionUI.py  encryptionUI.ui  generatorClass.py  generatorForm.py  generatorUI.py  generatorUI.ui  historyUI.py  historyUI.ui
tools/mapfileGenerator/ctk_opcua_generator_tools/test/: test.xml  testMapGenerator.py  test_mapping.xml  test_mapping_minimal.xml
tools/mapfileGenerator/generator_tools/: generatorClass.py  generatorForm.py  generatorUI.ui
tools/pyUANamespace/: open62541_MacroHelper.py  ua_node_types.py
xmlschema/: opcua_mapfile.xsd
